data/forge_javadoc/1.8.9/raw/net/minecraft/client/model/ModelWolf.md
---
title: "ModelWolf"
description: "public class ModelWolf extends ModelBase"
package: "net/minecraft/client/model"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/model/ModelWolf.html"
sourceType: javadoc
---

# ModelWolf

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelWolf

## Class signature

```java
public class ModelWolf extends ModelBase
```

## Constructors

- `ModelWolf()`

## Methods

- `void render(Entity entityIn, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float scale)` — Sets the models various rotation angles then renders the model.
- `void setLivingAnimations(EntityLivingBase entitylivingbaseIn, float p_78086_2_, float p_78086_3_, float partialTickTime)` — Used for easily adding entity-dependent animations.
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity entityIn)` — Sets the model's various rotation angles.

## Fields

- `ModelRenderer wolfBody` — The wolf's body
- `ModelRenderer wolfHeadMain` — main box for the wolf head
- `ModelRenderer wolfLeg1` — Wolf'se first leg
- `ModelRenderer wolfLeg2` — Wolf's second leg
- `ModelRenderer wolfLeg3` — Wolf's third leg
- `ModelRenderer wolfLeg4` — Wolf's fourth leg
